@@ -1149,9 +1149,9 @@ as illustrated:</p>
 <ul>
 <li><b>Frame Cycle</b>: The number of CPU cycles that have been executed this frame since
 VSYNC was cleared at scanline 0.</li>
-<li><b>WSync Cycl.</b>: The number of CPU cycles that have been skipped by WSYNC this frame since
+<li><b>WSync Cycle</b>: The number of CPU cycles that have been skipped by WSYNC this frame since
 VSYNC was cleared at scanline 0.</li>
-<li><b>Timer Cycl.</b>: The number of CPU cycles (approximately) that have been used by timer read loops since
+<li><b>Timer Cycle</b>: The number of CPU cycles (approximately) that have been used by timer read loops since
 VSYNC was cleared at scanline 0.</li>
 <li><b>Total</b>: The total number of CPU cycles since this ROM was loaded or reset.</li>
 <li><b>Delta</b>: The number of CPU cycles that have been executed since the last debugger
